--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -3,14 +3,41 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-    /* font-family: 'Satisfy', cursive; */
+  /* font-family: 'Satisfy', cursive; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background:'rgb(255, 250, 250)';
+  background: 'rgb(255, 250, 250)';
   color: black;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  /* width: 40%; */
+  max-width: 100%;
+  margin: auto;
+}
+
+thead th {
+  border-bottom: 2px solid #dedede;
+}
+
+tfoot th {
+  border-top: 2px solid #dedede;
+}
+
+td {
+  border-top: 2px solid #dedede;
+}
+
+th,
+td {
+  text-align: left;
+  padding: 0.5em;
 }
